[package]
name = "compiler-pku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
koopa = "0.0.7"

[build-dependencies]
lalrpop = "0.20.2"

